--- a/thesis.tex
+++ b/thesis.tex
@@ -65,11 +65,16 @@
 %\def\declaration{All the work in this thesis has been sourced from Google}
 
 \beforeabstract % Don't move the abstract, it doesn't like it.
-Transmembrane $\alpha$ helix containing proteins make up around a quarter of all proteins, as well as two thirds of drug targets, and contain some of the most critical proteins required for life as we know it. Yet they are fundamentally difficult to study experimentally. This is in part due to the very features that make them so biologically influential: their hydrophobic transmembrane helices. What is missing in the current literature is a nuanced understanding of the complexities of the helix composition beyond a hydrophobic region of around 20 residues. Currently it is known that the properties of transmembrane protein $\alpha$ helices underpin membrane protein insertion mechanisms and furthermore can be used to predict presence of function in the transmembrane helix itself. By leveraging large datasets of transmembrane proteins, this thesis is focussed on characterising features of $\alpha$ helices en masse, particularly regarding their topology, membrane-protein interactions, and intra-membrane protein interactions.
+Non\---polar helices figure prominently in structural biology, from the first protein structure (myoglobin) through \gls{tm} segments, to current work on recognition of protein trafficking and quality control. \gls{tm} $\alpha$ helix containing proteins make up around a quarter of all proteins, as well as two thirds of drug targets, and contain some of the most critical proteins required for life as we know it. Yet they are fundamentally difficult to study experimentally. This is in part due to the very features that make them so biologically influential: their non\---polar \gls{tmh} regions. What is missing in the current literature is a nuanced understanding of the complexities of the helix composition beyond a hydrophobic region of around 20 residues. Currently it is known that the properties of transmembrane protein $\alpha$ helices underpin membrane protein insertion mechanisms. Studies in Frank Eisenhaber’s group at the A*STAR Bioinformatics Institute have identified types of transmembrane helix, simple are characterised by their hydrophobicity, and complex type by the addition of structural and ancestral features that mediate a role beyond basic membrane insertion and furthermore can be used to predict presence of function in the transmembrane helix itself.
 
-Herein we expand on the core understanding of the biophysicochemical properties of these helices. We find evidence of a universal ``negative-not-inside'' rule that complements the famous ``positive-inside rule'' as well as intramembrane leucine propensity for the inner leaflet.
+By leveraging large datasets of transmembrane proteins, this thesis is focussed on characterising features of $\alpha$ helices en masse, particularly regarding their topology, membrane\---protein interactions, and intra-membrane protein interactions.
 
-Furthermore we provide an up-to-date dataset of potential Tail-Anchored proteins, a group of post-translationally inserted proteins.
+\begin{itemize}
+  \item Herein we expand on the core understanding of the biophysicochemical properties of these helices. We find evidence of a universal ``negative-not-inside'' rule that complements the famous ``positive-inside rule'' as well as intramembrane leucine propensity for the inner leaflet.
+  \item An up-to-date set of potential \gls{ta} proteins (a group of post-translationally inserted proteins) is rebuilt.
+  \item A novel \gls{gpi} lipid anchor is characterised.
+  \item The hydrophobicity\---complexity continuum is investigated in relation to function and recognition.
+\end{itemize}
 \afterabstract
 
 
