--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -27,16 +27,22 @@ It has been known for some time that the outer membranes of Gram negative bacter
 \subsection{Membrane Potential}
 
 %Highlight the differences in membrane potential. Role in positive charge inside. Estimations of membrane potential.
+\\
 Nernst:
-${E}_{m} = \frac{RT}{F}\times \ln { \frac{{c}_{out}}{{c}_{in}} }
+\\
+\begin{align*}
+{E}_{m} &= \frac{RT}{F}\times \ln { \frac{{c}_{out}}{{c}_{in}} }
+\end{align*}
 
-${E}_{m} = \frac{RT}{F}\times \ln \left(\frac{p_{K^+}.[K^+]_{out} + p_{Na^+}.[Na^+]_{out} + p_{Cl^-}.[Cl^-]_{in}} {p_{K^+}.[K^+]_{in} + p_{Na^+}.[Na^+]_{in} + p_{Cl^-}.[Cl^-]_{out}}\right)
-
- where
-- $Em$ is the membrane potential
-- $z$ is the ion charge
-- $[X]$ is the ion concentration
-- $p_X$ is the relative membrane permeability for the actual ion
+\\
+Goldman:
+\\
+\begin{align*}
+{E}_{m} &= \frac{RT}{F}\times \ln \left(\frac{p_{K^+}.[K^+]_{out} + p_{Na^+}.[Na^+]_{out} + p_{Cl^-}.[Cl^-]_{in}} {p_{K^+}.[K^+]_{in} + p_{Na^+}.[Na^+]_{in} + p_{Cl^-}.[Cl^-]_{out}}\right)
+\end{align*}
+\\
+ Where $Em$ is the membrane potential, $z$ is the ion charge, $[i]$ is the ion concentration
+ $p_i$ is the relative membrane permeability for the actual ion
 
 
 \section{$\alpha$ Helices in Membranes }
