--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -25,22 +25,21 @@ There is a rich variety of lipid molecules that make up the biological membranes
 It has been known for some time that the outer membranes of Gram negative bacteria are asymentric in terms of lipid composition. The outer membranes contain lipopolysccharide, whilst the inner is a mixture of approximately 25 phospholipid types. Adding to the membrane asymmetry composition story, a thorough analysis of residue composition in yeast and human \gls{tmh} regions revealed intra-membrane leaflet composition asymetry in the \gls{er}, but not the Golgi \cite{Sharpe2010}. Furthermore protein\-lipid interactions have been shown to be determinants of membrane curvature \cite{Jensen2004}, and undertake complex orientations and conformations to allow for hydrophobic mismatch \cite{Planque2003}. %the planque reference is messed up. It may need changing with every bib.tex update unless the permannet record is changed.
 
 \subsection{Membrane Potential}
+Simply put, membrane potential is the voltage across a membrane. If the membrane is permeable to a certain type of ion, then the ion will experience an electrical pulling force during the diffusion process that will facour the ``preferred'' biological location.
 
-%Highlight the differences in membrane potential. Role in positive charge inside. Estimations of membrane potential.
-\\
-Nernst:
-\\
+There are various ways of estimating the membrane potential {\it ab initio}. There are two famous equations that are often discussed when estimating this voltage. The Nernst equation is derived directly from the simplified thermodynamic principles (i) the Boltzmann ditribution, and (ii) the 
+
 \begin{align*}
 {E}_{m} &= \frac{RT}{F}\times \ln { \frac{{c}_{out}}{{c}_{in}} }
 \end{align*}
 
-\\
+
 Goldman:
-\\
+
 \begin{align*}
 {E}_{m} &= \frac{RT}{F}\times \ln \left(\frac{p_{K^+}.[K^+]_{out} + p_{Na^+}.[Na^+]_{out} + p_{Cl^-}.[Cl^-]_{in}} {p_{K^+}.[K^+]_{in} + p_{Na^+}.[Na^+]_{in} + p_{Cl^-}.[Cl^-]_{out}}\right)
 \end{align*}
-\\
+
  Where $Em$ is the membrane potential, $z$ is the ion charge, $[i]$ is the ion concentration
  $p_i$ is the relative membrane permeability for the actual ion
 
