--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -122,7 +122,7 @@ Throughout this thesis several scales are used to evaluate and estimate hydropho
 A scale based on the water\---vapour transfer free energy and the interior-exterior distribution of individual amino acids \cite{Kyte1982}.
 
 \subsubsection{Hessa's Biological Hydrophobicity Scale}
-This is arguably the most biologically relevent scale \cite{Peters2014}. The scale is based on an experimental method where the free energy exchange during recognition of designed polypeptide helices by the endoplasmic reticulum Sec61 translocon occured \cite{Hessa2005}. These measurements were then used to calculate a “biological hydrophobicity scale.”
+This is arguably the most biologically relevent scale \cite{Peters2014}. The scale is based on an experimental method where the free energy exchange during recognition of designed polypeptide helices by the endoplasmic reticulum Sec61 translocon occured \cite{Hessa2005}. These measurements were then used to calculate a “biological hydrophobicity scale.” %talk about expansion of this work in 2007 to show positional variance.
 
 \subsubsection{White and Wimley Octanol \--- Interface Whole Residue Scale}
 This scale is calculated from two other scales; the octanol scale, and the interface scale \cite{White1999}. This scale is fundamentally based on the partitioning of host-guest pentapeptides (acetyl-WL-X-LL-OH) and another set of peptides (AcWLm) between water and octanol, as well as water to \gls{popc} .
@@ -151,10 +151,14 @@ Because of the experimental hinderence, the story of transmembrane proteins has 
 
 %At the time of writing, how many in PDB.
 
+\section{Beyond ${\Delta G}_{app}$: cryptic sequence features.}
+\subsection{Sequence complexity.}
+
+
 \section{Aims of This Thesis.}
 
 \begin{enumerate}
-  \item Negative not inside rule
+  \item Negative not inside rule, and the topological nuances of TMHs
   \item \gls{gpi} project
   \item \gls{snare} and \gls{ta} project
   \item Good and bad helices
