--- a/thesis.tex
+++ b/thesis.tex
@@ -79,7 +79,7 @@ By leveraging large datasets of transmembrane proteins, this thesis is focussed 
 
 %The preface section doesn't like being in a different document for some reason. (I think it's just my compiler, there is no reason why it shouldn't work)
 \prefacesection{Acknowledgements}
-I would like to thank all members of both the Eisenhaber research group, as well as the the Curtis and Warwicker research group for discussion, but in particular Jim Warwicker, Frank Eisenhaber, Birgit Eisenhaber, and Wing-Cheong Wong for supervision and guidance during my research. I would also like to thank The University of Manchester and the A*STAR Singapore Bioinformatics Institute for funding the project. Furthermore I would like to extend my gratitude to the research group of Professor Stephen High.
+I would like to thank all members of both the Eisenhaber research group, as well as all members from the the Curtis and Warwicker research group and the extended Eisenhaber group including Sebastian Maurer-Stroh's group, and my academic advisor Professor Stephen High for discussion, but in particular Jim Warwicker, Frank Eisenhaber, Birgit Eisenhaber, and Wing-Cheong Wong for supervision and guidance during my research. I would also like to thank The University of Manchester and the A*STAR Singapore Bioinformatics Institute for funding the project. Furthermore I would like to extend my gratitude to the research group of Professor Stephen High.
 
 %Shout out to all the Biopython devs that saved my sanity!
 
@@ -91,9 +91,9 @@ I would like to thank all members of both the Eisenhaber research group, as well
 %\end{displayquote}
 
 %I think this accurately summarises my attempts at applying philosophy to science for my philosophical doctorate.
-I can't help but wish my thesis title was ``The ins-and-outs of greasy peptides''.
+%I can't help but wish my thesis title was ``The ins-and-outs of greasy peptides''.
 
-So long, and thanks for all the fish!
+%So long, and thanks for all the fish!
 
 \prefacesection{List of publications}
 
