Updated chapter list, introduction etc

--- a/chapter_conclusions.tex
+++ b/chapter_conclusions.tex
@@ -1,4 +1,4 @@
 \chapter{Conclusions}
 \section{Outlook}
 \subsection{The hydrophobicity\---sequence complexity continuum}
-We hypothesise that the hydrophobicity\---sequence complexity continuum contains nuanced codes for different functions and that such differentiation of sequence and structural properties will allow assignment to these varying functions.  Additionally, we suggest probing functional classification of yet uncharacterised membrane proteins by similarities of combinations of complex TM sets to well studied membrane proteins and finding those classes of TM proteins where this principle is most directly applicable.
+We hypothesize that the hydrophobicity\---sequence complexity continuum contains nuanced codes for different functions and that such differentiation of sequence and structural properties will allow assignment to these varying functions.  Additionally, we suggest probing functional classification of yet uncharacterized membrane proteins by similarities of combinations of complex TM sets to well studied membrane proteins and finding those classes of TM proteins where this principle is most directly applicable.
