--- a/chapter_tailanchor.tex
+++ b/chapter_tailanchor.tex
@@ -1,8 +1,8 @@
-\chapter{Tail-anchored protein discovery} %Mutants outlined + any results from Abbi
+\chapter{Tail-Anchored Proteins Revisited; An Up-To-Date Dataset And Biochemical Insights Into Spontaneous Insertion} %Mutants outlined + any results from Abbi
 \section{Abstract}
 
 \section{Introduction}
-This study aims to identify \gls{snare} proteins in eukaryotic proteomes by filtering through large datasets using automatically predicted TrEMBL consensus, and manually annotated SWISS-PROT transmembrane regions. The pipeline generates a list of singlepass proteins with a transmembrane domain close to the C terminal, that are not splice isoforms. A previous study predicted 411 tail anchor proteins \cite{Kalbfleisch2007}.
+This study aims to identify \gls{snare} proteins in eukaryotic proteomes by filtering through large datasets using automatically predicted TrEMBL consensus, and manually annotated SWISS-PROT transmembrane regions. The pipeline generates a list of singlepass proteins with a transmembrane domain close to the C terminal, that are not splice isoforms. A previous study predicted 411 tail anchor proteins\cite{Kalbfleisch2007}.
 
 \section{Methods}
 The original list UniProt protein database was queried for records containing ``TRANSMEM'' annotation on June 15, 2016, totaling 75826 records from swissprot, and 12322000 records from TrEMBL.
@@ -12,7 +12,7 @@ The original list UniProt protein database was queried for records containing ``
 %Twenty dimensional vectors were used to represent the amino acid composition of the transmembrane segment of each protein. For each di- mension, the normalized frequency was calculated by counting the number of occurrences of each amino acid within a transmembrane segment (as defined by TMPRED) and dividing each count by the total number of amino acids in the transmembrane segment. The protein ambiguity code ‘X’ was found within some of the transmembrane segments. Its contribution was calculated andwas given the same weight as any of the unambiguous amino acids. For each class of protein (Figure 2 and Tables S2 and S3), a represen- tative average vector was calculated by summing the contributions for each amino acid. The average vector was then reduced to unit length by dividing by the square root of the sumof the squares of all theamino acidscumulative values. Prior to calculation of the dot product, each protein’s amino acid contribution vectorwas reduced to unit length by dividing by the square root of the sum of the squares of each amino acid contribution. The dot products were then calculated by multiplying each individual amino acid contribution of a specified representative average against each analogous amino acid contribution of a specific protein’s transmembrane region. These values were then summed to produce the representative value reflecting the coincidence of amino acid distributions.
 Expression
 \subsection{Filtering the Uniprot database}
-Steps carried out by Kalbfleisch {\it et al.} published in Traffic 2007 (8: 1687\-1694) were recreated using up to date tools. The non\-redundant human dataset of 145,715 proteins from SwissProt and TrEMBL \cite{Kalbfleisch2007, TheUniProtConsortium2014}. 2,478 singlepass proteins were programmatically extracted according to the TRANSMEM count from that list. Then TMDs not within 15AA of the C terminal were removed, resulting in 455 proteins. No splice isoforms were detected according to searching for NON\_TER annotation. 195 proteins of the 411 predicted proteins from the previous study were successfully mapped using the Uniprot mapping tools \cite{TheUniProtConsortium2014}. Duplicate IDs from the previously predicted tail anchored protein were removed from the set. The remaining dataset contained XXX proteins.
+Steps carried out by Kalbfleisch {\it et al.} published in Traffic 2007 (8: 1687\-1694)\cite{Kalbfleisch2007}, were recreated using up to date tools. The non\-redundant human dataset of 145,715 proteins from SwissProt and TrEMBL\cite{TheUniProtConsortium2014}. 2,478 singlepass proteins were programmatically extracted according to the TRANSMEM count from that list. Then TMDs not within 15AA of the C terminal were removed, resulting in 455 proteins. No splice isoforms were detected according to searching for NON\_TER annotation. 195 proteins of the 411 predicted proteins from the previous study were successfully mapped using the Uniprot mapping tools\cite{TheUniProtConsortium2014}. Duplicate IDs from the previously predicted tail anchored protein were removed from the set. The remaining dataset contained XXX proteins.
 
 \subsection{Calculating Hydrophobicity}
 
